fix spacing

--- a/src/modules/ModuleDetail/Section/styles.module.scss
+++ b/src/modules/ModuleDetail/Section/styles.module.scss
@@ -1,7 +1,7 @@
 .wrapper {
   padding: 60px 0;
   @include is-pc {
-    padding: 120px 0;
+    padding: 80px 0;
 
   }
 }
