--- a/src/modules/ModuleDetail/styles.module.scss
+++ b/src/modules/ModuleDetail/styles.module.scss
@@ -19,8 +19,8 @@
   line-height: calc(27 / 18);
 }
 
-.item {
-  margin-bottom: 40px;
+.item:not(:first-child) {
+  margin-top: 40px;
 }
 
 .link {
